# traversability_estimation

./: .gitignore  README.md
traversability_estimation/: CMakeLists.txt  package.xml
traversability_estimation/include/traversability_estimation/: TraversabilityEstimation.hpp  TraversabilityMap.hpp
traversability_estimation/src/: TraversabilityEstimation.cpp  TraversabilityMap.cpp  traversability_estimation_node.cpp
traversability_estimation_filters/: CMakeLists.txt  package.xml
traversability_estimation_filters/include/filters/: RoughnessFilter.hpp  SlopeFilter.hpp  StepFilter.hpp
traversability_estimation_filters/src/: RoughnessFilter.cpp  SlopeFilter.cpp  StepFilter.cpp
traversability_interfaces/: CMakeLists.txt  package.xml
traversability_interfaces/srv/: CheckFootprintPath.srv
