<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traversability_estimation_filters</name>
  <version>0.4.0</version>
  <description>Library for filtering elevation maps.</description>

  <maintainer email="pfankhauser@anybotics.com">Peter Fankhauser</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/ethz-asl/traversability_estimation</url>
  <url type="bugtracker">https://github.com/ethz-asl/traversability_estimation/issues</url>

  <author email="martiwer@student.ethz.ch">Martin Wermelinger</author>
  <author email="pfankhauser@anybotics.com">Peter Fankhauser</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>grid_map_ros</exec_depend>
  <exec_depend>grid_map_core</exec_depend>
  <exec_depend>grid_map_msgs</exec_depend>
  <exec_depend>filters</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <filters plugin="${prefix}/filter_plugins.xml" />
  </export>
</package>
